@@ -42,3 +42,6 @@ s0_autohide_animation = 1
 
 [wall]
 s0_slide_duration = 0
+
+[showdesktop]
+s0_skip_animation = true
