@@ -3,6 +3,8 @@ compiz (1:0.9.12.2+16.04.20160526-0ubuntu2) UNRELEASED; urgency=medium
   [ Eleni Maria Stea ]
   * Added options for no animation in expo and scale plugins. They skip
     the intermediate fading steps that force several redraws.
+  * Added a new option in show desktop plugin that skips the fade
+    animation: useful when performance is more important than eyecandy.
 
   [ Marco Trevisan (Treviño) ]
   * debian: add unity-lowgfx profile to compizconfig (LP: #1598770)
